# GNNs_for_Crime_prediction

./: README.md
crime-data/: README.md
crime-data/src/dataloader/: evolvegcn.py  log_parser.py
crime-data/src/download/: download_sp_data.py
crime-data/src/process/: polygons_coordinates.json  process_sp_data.py  utils.py
dysat/: README.md
dysat/src/: .gitignore  Traditonal_ML_models.py  baseline_methods.py  pyproject.toml  train_months.py  utils.py
dysat/src/dataloader/: dataloader_Dysat.py  minibatch.py
dysat/src/dependencies/: torch_cluster-1.6.3+pt22cpu-cp312-cp312-win_amd64.whl  torch_cluster-1.6.3+pt23cu121-cp312-cp312-win_amd64.whl  torch_scatter-2.1.2+pt22cpu-cp312-cp312-win_amd64.whl  torch_scatter-2.1.2+pt23cu121-cp312-cp312-win_amd64.whl
dysat/src/models/: Dysat_model.py  layers.py
evolvegcn/: README.md  egcn_dataloader.py  logger.py  models.py  pyproject.toml  run_sp_exp.py  sp_dl.py  utils.py
evolvegcn/color_map/: Map.ipynb
evolvegcn/experiments/: parameters_sp_egcn_h.yaml
evolvegcn/src/EGCN_model/: egcn_h.py  logger.py  models.py  sp_dl.py  taskers_utils.py
evolvegcn/src/EGCN_model/experiments/: parameters_sp_egcn_h.yaml
evolvegcn/src/dataloader/: egcn_dataloader.py
