[tool.poetry]
name = "evolvegcn-github"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.2"
torch = "^2.4.0"
numpy = "^2.1.0"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.1"
pandas = "^2.2.2"
geopandas = "^1.0.1"
folium = "^0.17.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
