[tool.poetry]
name = "dysat-model"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.2"
numpy = "^1.26.4"
pandas = "^2.2.2"
torch = {url = "https://download.pytorch.org/whl/cu121/torch-2.3.0%2Bcu121-cp312-cp312-win_amd64.whl"}
torchvision = {url = "https://download.pytorch.org/whl/cu121/torchvision-0.18.0%2Bcu121-cp312-cp312-win_amd64.whl"}
torchaudio = {url = "https://download.pytorch.org/whl/cu121/torchaudio-2.3.0%2Bcu121-cp312-cp312-win_amd64.whl"}
torch-scatter = {path = "dependencies/torch_scatter-2.1.2+pt23cu121-cp312-cp312-win_amd64.whl"}
torch-cluster = {path = "dependencies/torch_cluster-1.6.3+pt23cu121-cp312-cp312-win_amd64.whl"}


geopandas = "^0.14.4"
ipykernel = "^6.29.4"
torch-geometric = "^2.5.3"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
dash = "^2.17.1"
statsmodels = "^0.14.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
